--- a/backend/wp-content/themes/rschip/src/components/productSlider/productSlider.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/productSlider/productSlider.component.sass
@@ -96,6 +96,7 @@
     
     &__Thumbnails
         overflow: hidden
+        padding-right: 15px 
         +sm-block
             width: 65%
             margin: 0 auto
@@ -112,6 +113,7 @@
             .swiper-wrapper
                 // transform: translate3d(0px,0,0) !important
             .swiper-slide
+                padding: 1px
                 opacity: 0.4
                 height: 100px
                 display: flex
