--- a/backend/wp-content/themes/rschip/src/sass/_allComponents.sass
+++ b/backend/wp-content/themes/rschip/src/sass/_allComponents.sass
@@ -143,7 +143,11 @@
     +size-sm(9/2)
     +size-md(9/4)
     display: flex
-    align-items: center
+    flex-direction: column
+    align-items: flex-start
+    // flex-wrap: wrap
+    
+    // align-items: center
     margin-bottom: 3%
     &__text
         font-family: #{$SFUIText}-Regular
@@ -454,6 +458,7 @@
         width: 100%
     img
         width: 100%
+        object-fit: cover
         +md-block
             width: auto
 
@@ -2175,17 +2180,24 @@ html
         .performanceTableItemTd
             font-size: 14px
             line-height: 29px
+
+            &:last-child
+                display: none
             
     &__Body
         display: flex
         flex-wrap: wrap
+        .performanceTableItemTd
+            &:last-child
+                display: none
 
 .performanceTableItemTd
     +col
     +size(9)
-    +size-sm(2)
-    +size-md(2)
-
+    // +size-sm(2)
+    // +size-md(2)
+    +size-sm(3)
+    +size-md(3)
     display: flex
     flex-wrap: wrap
     // text-align: center
@@ -2196,6 +2208,7 @@ html
         text-align: left
         div
             width: 100%
+        
 
     .title
         display: block
@@ -2559,8 +2572,6 @@ html
 
     +md-block
         margin: 0px 20px
-    
-
 
 .productRsControlsTitle
     width: 100%
@@ -2582,7 +2593,7 @@ html
         margin-left: 6%
         padding-right: 0
 
-    .page__title-h4 
+    .page__title-h4
         font-family: #{$SFUIDisplay}-Bold
         font-size: 24px
         line-height: 36px
@@ -2591,7 +2602,6 @@ html
             font-size: 36px
             line-height: 59px
             letter-spacing: 0.11em
-        
 
 .productRsControlsImg
     width: 100%
@@ -2602,13 +2612,12 @@ html
         margin-left: -3%
     +md-block
         margin-left: -10%
-    
+
     .swiper-slide
         img
             width: 100%
             height: 100%
             object-fit: cover
-
 
 .productRsControlsToggles
     display: block
@@ -2617,26 +2626,24 @@ html
     line-height: 28px
     font-weight: bold
     max-height: 250px
-   
+
     margin-top: 12%
     margin-left: 11%
 
     margin-bottom: 10%
-
 
     +sm-block
         width: 40%
         margin-top: 7%
         margin-left: 3%
         margin-bottom: 0
-    +md-block  
+    +md-block
         width: 25%
-        margin-top: 8% 
+        margin-top: 8%
         margin-left: 0
-    
+
     .swiper-wrapper
         // transform: translate3d(0px,0,0) !important
-
 
 .productRsControlsToggelsItem
     display: flex
@@ -2646,20 +2653,20 @@ html
     cursor: pointer
     transition: all .3s ease
     box-sizing: border-box
+    outline: none
+    -webkit-tap-highlight-color: rgba(0,0,0,0)
 
     &:hover,
     &:active,
     &:focus
         background: rgba(196, 196, 196, 0.2)
         border-radius: 20px 0px 0px 20px
+    
     &.swiper-slide-thumb-active
         background: rgba(196, 196, 196, 0.2)
         border-radius: 20px 0px 0px 20px
-        opacity: 1
-    // &.prev,
-    // &.next
+        // opacity: 1
         opacity: 0.7
-    
 
     &::after
         content: ''
@@ -2674,29 +2681,42 @@ html
         -webkit-filter: blur(164px)
         -moz-filter: blur(164px)
         -ms-filter: blur(164px)
-        opacity: 0
-        
+        opacity: 1
+
+        backdrop-filter: blur(164px)
+        -webkit-backdrop-filter: blur(164px)
+        -ms-backdrop-filter: blur(164px)
+        -moz-backdrop-filter: blur(164px)
+
     &.swiper-slide-thumb-active
         &::after
             opacity: 1
-            
-
 
 .page
     &_bgRed
         &::after
+            background: -ms-filter(linear, left top, right top, from(#FF4587), to(#FF5438))
+            background: -moz-filter(linear, left top, right top, from(#FF4587), to(#FF5438))
             background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
     &_bgYellow
         &::after
+            background: -ms-filter(linear, left top, right top, from(#FDE720), to(#FF9838))
+            background: -moz-filter(linear, left top, right top, from(#FDE720), to(#FF9838))
             background: linear-gradient(90deg, #FDE720 0%, #FF9838 100%)
     &_bgGray
         &::after
+            background: -ms-filter(linear, left top, right top, from(#B2B2B2), to(#F4F7F7))
+            background: -moz-filter(linear, left top, right top, from(#B2B2B2), to(#F4F7F7))
             background: linear-gradient(90deg, #B2B2B2 0%, #F4F7F7 100%)
     &_bgBlue
         &::after
+            background: -ms-filter(linear, left top, right top, from(#01D1FF), to(#38FFFF))
+            background: -moz-filter(linear, left top, right top, from(#01D1FF), to(#38FFFF))
             background: linear-gradient(90deg, #01D1FF 0%, #38FFFF 100%)
     &_bgGreen
         &::after
+            background: -ms-filter(linear, left top, right top, from(#25FF01), to(#60FF38))
+            background: -moz-filter(linear, left top, right top, from(#25FF01), to(#60FF38))
             background: linear-gradient(90deg, #25FF01 0%, #60FF38 100%)
 
 /*productRsSafest*/
@@ -2858,6 +2878,7 @@ html
     
     &__Thumbnails
         overflow: hidden
+        padding-right: 15px
         +sm-block
             width: 65%
             margin: 0 auto
@@ -2874,6 +2895,7 @@ html
             .swiper-wrapper
                 // transform: translate3d(0px,0,0) !important
             .swiper-slide
+                padding: 1px
                 opacity: 0.4
                 height: 100px
                 display: flex
@@ -3331,7 +3353,7 @@ html
     width: 100%
     &.noSelected
         .selectBoxContainer
-            border-color: #ff3a3a 
+            border-color: #ff3a3a
 .selectBoxText
     display: none
     font-family: #{$SFUIText}-Regular
@@ -3620,11 +3642,9 @@ html
             position: absolute
             bottom: auto
             top: 40px
-            
+
             max-height: 200px
             border-radius: 16px
-
-
 
     &__option
         display: block
@@ -3634,6 +3654,8 @@ html
         white-space: nowrap
 
         border-bottom: 1px solid rgba(0, 0, 0, 0.2)
+        overflow: hidden
+        text-overflow: ellipsis
         &:hover,
         &:focus
             color: #546c84
@@ -3770,9 +3792,11 @@ html
         align-items: flex-end
         overflow: hidden
         margin-bottom: 24px
+        height: 255px
 
         img
             object-fit: cover
+            height: 100%
     &__Title
         font-family: #{$SFUIDisplay}-Bold
         font-size: 24px
