--- a/backend/wp-content/themes/rschip/src/components/advantages/advantages.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/advantages/advantages.component.sass
@@ -18,7 +18,11 @@
     +size-sm(9/2)
     +size-md(9/4)
     display: flex
-    align-items: center
+    flex-direction: column
+    align-items: flex-start
+    // flex-wrap: wrap
+    
+    // align-items: center
     margin-bottom: 3%
     &__text
         font-family: #{$SFUIText}-Regular
