--- a/backend/wp-content/themes/rschip/src/components/steps/steps.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/steps/steps.component.sass
@@ -54,9 +54,11 @@
         align-items: flex-end
         overflow: hidden
         margin-bottom: 24px
+        height: 255px
 
         img
             object-fit: cover
+            height: 100%
     &__Title
         font-family: #{$SFUIDisplay}-Bold
         font-size: 24px
